ocaml/testsuite/tests/templates/basic/bad_instance_arg_value_not_arg.reference
File "bad_instance_arg_value_not_arg.ml", line 2, characters 2-57:
2 |   Monoid_utils(Monoid)(Monoid_utils(Monoid)(List_monoid)) [@jane.non_erasable.instances]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The module "Monoid_utils[Monoid:List_monoid]"
       cannot be used as an argument for parameter"Monoid".
Hint: Compile "monoid_utils.cmi" with "-as-argument-for Monoid".
